// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-button-menu should render by default (variant=border, size=medium, icon=utility:down, menuAlignment=left) 1`] = `
<c-button-menu
  class="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  #shadow-root(open)
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="slds-button slds-button_icon-border"
      type="button"
      value=""
    >
      <c-primitive-icon>
        #shadow-root(open)
          <svg
            aria-hidden="true"
            class="slds-button__icon"
            data-key="down"
            focusable="false"
          >
            <use
              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
            />
          </svg>
      </c-primitive-icon>
      <span
        class="slds-assistive-text"
      >
        Show menu
      </span>
    </button>
</c-button-menu>
`;

exports[`c-button-menu should show dropdown if button is clicked 1`] = `
<c-button-menu
  class="slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
>
  #shadow-root(open)
    <button
      aria-expanded="true"
      aria-haspopup="true"
      class="slds-button slds-button_icon-border"
      type="button"
      value=""
    >
      <c-primitive-icon>
        #shadow-root(open)
          <svg
            aria-hidden="true"
            class="slds-button__icon"
            data-key="down"
            focusable="false"
          >
            <use
              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
            />
          </svg>
      </c-primitive-icon>
      <span
        class="slds-assistive-text"
      >
        Show menu
      </span>
    </button>
    <div
      class="slds-dropdown slds-dropdown_left"
    >
      <div
        class="slds-dropdown__list slds-dropdown_length-with-icon-10"
        role="menu"
      >
        <slot />
      </div>
    </div>
</c-button-menu>
`;

exports[`c-button-menu-icon-name-attr should show two icons when icon-name is not :down 1`] = `
<c-button-menu
  class="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  #shadow-root(open)
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="slds-button slds-button_icon slds-button_icon-more"
      type="button"
      value=""
    >
      <c-primitive-icon>
        #shadow-root(open)
          <svg
            aria-hidden="true"
            class="slds-button__icon"
            data-key="settings"
            focusable="false"
          >
            <use
              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
            />
          </svg>
      </c-primitive-icon>
      <c-primitive-icon>
        #shadow-root(open)
          <svg
            aria-hidden="true"
            class="slds-button__icon slds-button__icon_x-small slds-m-left_xx-small"
            data-key="down"
            focusable="false"
          >
            <use
              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
            />
          </svg>
      </c-primitive-icon>
      <span
        class="slds-assistive-text"
      >
        Show menu
      </span>
    </button>
</c-button-menu>
`;

exports[`c-button-menu-icon-size-attr Button size = large should be medium if variant=bare 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr Button size = large should be medium if variant=bare-inverse 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr Button size = medium should be medium if variant=bare 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr Button size = medium should be medium if variant=bare-inverse 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr Button size = small should be medium if variant=bare 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr Button size = small should be medium if variant=bare-inverse 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr Button size = x-small should be medium if variant=bare 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr Button size = x-small should be medium if variant=bare-inverse 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr Button size = xx-small should be medium if variant=bare 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr Button size = xx-small should be medium if variant=bare-inverse 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr button class attribute should reflect size=large 1`] = `"slds-button slds-button_icon-border slds-button_icon-large"`;

exports[`c-button-menu-icon-size-attr button class attribute should reflect size=medium 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-icon-size-attr button class attribute should reflect size=small 1`] = `"slds-button slds-button_icon-border slds-button_icon-small"`;

exports[`c-button-menu-icon-size-attr button class attribute should reflect size=x-small 1`] = `"slds-button slds-button_icon-border slds-button_icon-x-small"`;

exports[`c-button-menu-icon-size-attr button class attribute should reflect size=xx-small 1`] = `"slds-button slds-button_icon-border slds-button_icon-xx-small"`;

exports[`c-button-menu-label should default with label defined 1`] = `
<c-button-menu
  class="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  #shadow-root(open)
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="slds-button slds-button_neutral"
      type="button"
      value=""
    >
      label
      <c-primitive-icon>
        #shadow-root(open)
          <svg
            aria-hidden="true"
            class="slds-button__icon"
            data-key="down"
            focusable="false"
          >
            <use
              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
            />
          </svg>
      </c-primitive-icon>
      <span
        class="slds-assistive-text"
      >
        Show menu
      </span>
    </button>
</c-button-menu>
`;

exports[`c-button-menu-variant-attr button class attribute should reflect variant=bare 1`] = `"slds-button slds-button_icon-bare"`;

exports[`c-button-menu-variant-attr button class attribute should reflect variant=bare-inverse 1`] = `"slds-button slds-button_icon-bare slds-button_icon-inverse"`;

exports[`c-button-menu-variant-attr button class attribute should reflect variant=border 1`] = `"slds-button slds-button_icon-border"`;

exports[`c-button-menu-variant-attr button class attribute should reflect variant=border-filled 1`] = `"slds-button slds-button_icon-border-filled"`;

exports[`c-button-menu-variant-attr button class attribute should reflect variant=border-inverse 1`] = `"slds-button slds-button_icon-border-inverse"`;

exports[`c-button-menu-variant-attr button class attribute should reflect variant=container 1`] = `"slds-button slds-button_icon-container"`;
